--- a/app.json
+++ b/app.json
@@ -18,7 +18,8 @@
             "required": false},
         "HEROKU_API_KEY": {
             "description": "get a Heroku API key from http://dashboard.heroku.com/account",
-            "required": false}
+            "required": false},
+        "UPSTREAM_REPO": {"description": "Telegram Log Channel ID"}
     },
     "buildpacks": [
         {"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"},
